# Multimodal_Fake_News_Detection

./: .env  .env.example  Dockerfile  README.md  app.py  data.py  features.py  graph_fusion.py  inference.py  main.py  preprocess.py  pyproject.toml  scrape.py  test_imports.py  train_eval.py  xai.py
